xong history, cache
